--- a/aula05.html
+++ b/aula05.html
@@ -33,7 +33,7 @@
 
         /* Seletor de Pseudo-classe */
         li:hover {
-            background-color: lightyellow;
+            background-color: rgb(18, 0, 95);
         }
 
         /* Seletor de Pseudo-elemento */
